RESOLVED FIXED232793
[LFC][IFC] bidi boundary does not necessarily mean soft wrapping opportunity
https://bugs.webkit.org/show_bug.cgi?id=232793
Summary [LFC][IFC] bidi boundary does not necessarily mean soft wrapping opportunity
alan
Reported 2021-11-06 19:49:06 PDT
ssia
Attachments
Patch (2.66 KB, patch)
2021-11-06 19:57 PDT, alan
no flags
Patch (2.82 KB, patch)
2021-11-07 06:49 PST, alan
no flags
alan
Comment 1 2021-11-06 19:57:04 PDT
alan
Comment 2 2021-11-07 06:49:04 PST
EWS
Comment 3 2021-11-07 10:39:14 PST
Committed r285391 (243948@main): <https://commits.webkit.org/243948@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443507 [details].
Radar WebKit Bug Importer
Comment 4 2021-11-07 10:40:20 PST
Note You need to log in before you can comment on or make changes to this bug.