[LFC][IFC] bidi boundary does not necessarily mean soft wrapping opportunity https://bugs.webkit.org/show_bug.cgi?id=232793

Reviewed by Antti Koivisto.

Prior to bidi support, we only split non-whitespace content at soft break opportunities e.g. hyphen.

* layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::endsWithSoftWrapOpportunity): Now we call findNextBreakablePosition on those rare bidi boundaries.
Could add a "break reason" to InlineTextItem if it turns out to be a perf issue.



Canonical link: https://commits.webkit.org/243948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285391 268f45cc-cd09-0410-ab3c-d52691b4dbfc